Add service to track token usage